<resources>
    <string name="app_name">Kamifriend</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>

    <!--    WELCOME     -->
    <string name="welcome_title">Selamat Datang di Kamifriend</string>
    <string name="welcome_tagline">Teman UMKM yang selalu ada</string>
    <string name="welcome_regis_btt_text">Daftarkan akun baru</string>
    <string name="welcome_login_btt_text">Masuk</string>
    <!--    welcome asset   -->
    <string name="welcome_asset_desc">welcome_desc_asset</string>

    <!--    REGISTER    -->
    <string name="register_et_fullname">Nama lengkap UMKM atau bisnis anda</string>
    <string name="register_et_email">Nomor WhatsApp (62xxxxxxxxxxx)</string>
    <string name="register_et_password">Masukkan kata kunci</string>
    <string name="register_et_confirm">Konfirmasi kata kunci</string>
    <string name="register_tagline">Mulai perjalanan UMKM bersama Kami</string>

    <!--    LOGIN      -->
    <string name="login_tagline">Lanjutkan perjalanan UMKM anda bersama Kami</string>
    <string name="not_have_an_account">Tidak punya akun?</string>
    <string name="registrasi">Registrasi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="lowongan_pekerjaan">Lowongan Pekerjaan</string>
    <string name="cari_pekerjaan_yang_sesuai_untuk_anda">Cari UMKM yang sesuai untuk anda!</string>
    <string name="lowongan_pekerjaan_yang_tersedia">Lowongan pekerjaan yang tersedia</string>
    <string name="nama_lowongan">Nama Lowongan</string>
    <string name="lokasi">Lokasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="tambah_lowongan">Tambah Lowongan</string>
    <string name="detail_pertanyaan_anda">Detail Pertanyaan Anda</string>
    <string name="judul_forum">Judul forum</string>
    <string name="tambahkan_media">Tambahkan Media</string>
    <string name="cari_file">Tambah dari perangkat</string>
    <string name="tambahkan_profile">Tambahkan profile</string>
    <string name="tambah_supplier">Tambah Supplier</string>
    <string name="forum">Forum</string>
    <string name="tambah_forum">Tambah forum</string>
    <string name="tambah_dari_perangkat">Tambah gambar profil dari perangkat</string>
    <string name="nama_supplier">Nama supplier</string>

    <string name="topik">Pilih Berdasarkan Topik</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="forum_tagline">Berbagi cerita dan ide bersama teman UMKM lain</string>
    <string name="forum_apa_yang_ingin_ditanyakan">Apa yang ingin anda tanyakan?</string>
    <string name="forum_populer_minggu_ini">Forum populer minggu ini</string>
    <string name="forum_teratas">Forum teratas</string>
    <string name="modal_usaha">Modal usaha</string>
    <string name="perizinan">Perizinan</string>
    <string name="pemasaran">Pemasaran</string>
    <string name="lainnya">Lainnya</string>
    <string name="supplier_pilihan_terbaik">Supplier pilihan terbaik</string>
    <string name="fnb">FnB</string>
    <string name="daftar_akun_baru">Daftar akun baru</string>
    <string name="strip">-</string>
    <string name="lamar">Lamar</string>

    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu scelerisque sapien. Morbi gravida pulvinar enim, blandit molestie ipsum finibus eget. Duis cursus justo sit amet nisl posuere convallis. Mauris tempor justo elit, eget interdum ligula lacinia eget. Praesent tempor eu eros non accumsan. Cras vitae mauris non tortor volutpat volutpat eu in eros. Mauris est ante, mattis a sapien nec, efficitur dictum lorem. Maecenas consectetur, justo eget viverra tristique, turpis orci semper tellus, a volutpat lorem neque sit amet elit. Nullam id ullamcorper orci. Suspendisse sit amet posuere ipsum. Fusce elementum tristique libero. Mauris turpis ipsum, lacinia eu eros a, vehicula vulputate neque. Proin quis leo non orci venenatis feugiat. Vivamus sed convallis ex.</string>
    <string name="supplier">Supplier</string>
    <string name="resouceperizinan">resoucePerizinan</string>
    <string name="rekomendasi_forum">Rekomendasi Forum</string>
    <string name="rekomendasi_forum_untuk_anda">Rekomendasi forum untuk anda</string>
    <string name="tambahkan_jawaban">Tambahkan jawaban</string>
    <string name="_234">234</string>
    <string name="_3_1_ribu">3,1 ribu</string>
    <string name="anonymous">Anonymous</string>
    <string name="dot">•</string>
    <string name="title_soal_di_sini">Title Forum</string>
    <string name="lokasi_supplier">Lokasi supplier</string>
    <string name="jasa_yang_mungkin_anda_perlukan">Jasa yang mungkin anda perlukan</string>
    <string name="jawaban_forum">Jawaban Forum</string>
    <string name="apa_kategori_umkm_anda">Apa kategori UMKM anda?</string>
    <string name="deskripsi_umkm_bisnis_anda">Deskripsi UMKM atau bisnis anda</string>
    <string name="lokasi_umkm_bisnis_anda">Lokasi UMKM atau bisnis anda</string>
    <string name="mulai_perjalanan_anda_sebagai_freelancer_bersama_kami">Mulai perjalanan anda sebagai freelancer bersama kami!</string>
    <string name="saran_usaha">Saran Usaha</string>
    <string name="tips_and_trick">Tips dan Trik</string>
    <string name="social_media">Social Media</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="apa_kategori_forum_yang_ingin_dibuat">Kategori forum anda</string>
    <string name="daftar">Daftar</string>
    <string name="backbtt">BACKBTT</string>
    <string name="lanjutbtt">LANJUTBTT</string>
    <string name="freelancer">Freelancer</string>
    <string name="freelanceric">FREELANCERIC</string>
    <string name="jasa">Jasa </string>
    <string name="desain_grafis">Desain Grafis</string>
    <string-array name="umkm_user_category">
        <item>Fabrikasi</item>
        <item>Food and Beverage</item>
    </string-array>
</resources>
