<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    tools:context=".RegisterPage">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/register_asset1" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            >

            <TextView
                android:id="@+id/registertitle"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="30sp"
                android:textColor="@color/primary"
                />

            <TextView
                android:id="@+id/welcome_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_tagline"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="15sp"
                android:textColor="@color/white"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            >

            <EditText
                android:id="@+id/inputfullname"
                android:hint="@string/register_et_fullname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="textStart"
                android:paddingHorizontal="15dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/round_edittext"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/inputnomor"
                android:hint="@string/register_et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="textStart"
                android:paddingHorizontal="15dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/round_edittext"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/inputpassword"
                android:inputType="textPassword"
                android:hint="@string/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="textStart"
                android:paddingHorizontal="15dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/round_edittext"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/inputconfirmpassword"
                android:inputType="textPassword"
                android:hint="@string/register_et_confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="textStart"
                android:paddingHorizontal="15dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/round_edittext"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btt_primary"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginVertical="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sudah_punya_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/txtMasuk"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/masuk"
                android:textColor="@color/primary"
                />

        </LinearLayout>
    </LinearLayout>










</RelativeLayout>