<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundlowongan"
    tools:context=".Addlowongan">

    <ImageView
        android:layout_width="486dp"
        android:layout_height="658dp"
        android:src="@drawable/addLowongan_asset1"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="-138dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/judullowongan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_lowongan"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="30sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxWidth="200dp"/>

    <EditText
        android:id="@+id/inputnamalowongan"
        android:hint="@string/nama_lowongan"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@+id/judullowongan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        />

    <EditText
        android:id="@+id/inputlokasi"
        android:hint="@string/lokasi"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/inputnamalowongan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        />

    <EditText
        android:id="@+id/inputdeskripsi"
        android:hint="@string/deskripsi"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/inputlokasi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonlowongan"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/tambahkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="350dp"
        app:layout_constraintTop_toTopOf="@+id/inputdeskripsi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>