<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundlowongan"
    tools:context=".Addlowongan">

    <ImageView
        android:layout_width="498dp"
        android:layout_height="673dp"
        android:src="@drawable/blobssupplier"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-46dp"
        tools:layout_editor_absoluteY="-138dp" />

    <TextView
        android:id="@+id/judulforum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_supplier"
        android:textColor="@color/white"
        android:fontFamily="@font/kanit_bold"
        android:textSize="30sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxWidth="200dp"/>

    <EditText
        android:id="@+id/inputnamasupllier"
        android:hint="Nama supplier"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@+id/judulforum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/kanit_regular"
        />

    <EditText
        android:id="@+id/inputlokasi"
        android:hint="@string/lokasi"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/inputnamasupllier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/kanit_regular"
        />

    <EditText
        android:id="@+id/inputdeskripsi"
        android:hint="@string/deskripsi"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/inputlokasi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/kanit_regular"
        />

    <TextView
        android:id="@+id/inputmedia"
        android:hint="@string/tambahkan_profile"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/round_edittext"
        android:textSize="15sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@+id/inputdeskripsi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="15dp"
        android:paddingTop="10dp"
        android:fontFamily="@font/kanit_regular"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:background="@drawable/round_btt_white"
        android:backgroundTint="@color/buttonsupplier"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/cari_file"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/inputmedia"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btt_white"
        android:backgroundTint="@color/buttonsupplier"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/tambahkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toTopOf="@+id/inputmedia"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>