<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    tools:context=".RegisterPage">

    <!--BG-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/register_asset1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--LOGO-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logotext_01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <!--MAIN CONTENT-->
    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Lengkapi data umkm"
                android:textColor="@color/primary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/register_tagline"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activityregisterumkm_inputfullname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/round_btt_white"
                android:hint="@string/register_et_fullname"
                android:paddingHorizontal="15dp"
                android:textAlignment="textStart"
                android:fontFamily="@font/kanit_light"
                android:textSize="15sp"
                android:textColorHint="@color/figma_gray"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/activityregisterumkm_inputlokasi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/round_btt_white"
                android:hint="@string/lokasi_umkm_bisnis_anda"
                android:paddingHorizontal="15dp"
                android:textAlignment="textStart"
                android:fontFamily="@font/kanit_light"
                android:textSize="15sp"
                android:textColorHint="@color/figma_gray"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/activityregisterumkm_inputdescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/round_btt_white"
                android:hint="@string/deskripsi_umkm_bisnis_anda"
                android:paddingHorizontal="15dp"
                android:textAlignment="textStart"
                android:fontFamily="@font/kanit_light"
                android:textSize="15sp"
                android:textColorHint="@color/figma_gray"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/activityregisterumkm_btnDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:src="@drawable/activityregister_button"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/white"
                android:fontFamily="@font/kanit_light"
                />

            <TextView
                android:id="@+id/activityregister_txtMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/kanit_regular"
                android:text="@string/masuk"
                android:textColor="@color/primary" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>